--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@
         width: 50px;
         height: 50px;
         bottom: 25px;
-        left: 25px; 
+        right: 25px; 
         background-color: #25d366;
         color: #FFF;
         border-radius: 50px;
