--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     body {
         font-family: 'Inter', sans-serif;
         background-color: #000000;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.94), rgba(0, 0, 0, 0.94)), url('https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.94), rgba(0, 0, 0, 0.94)), url('https://github.com/vikingo-44/Software-Gym/blob/main/wallpaper.png?raw=true');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
