--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     body {
         font-family: 'Inter', sans-serif;
         background-color: #000000;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.94), rgba(0, 0, 0, 0.94)), url('https://github.com/vikingo-44/Software-Gym/blob/main/wallpaper.png?raw=true');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.94), rgba(0, 0, 0, 0.94)), url('https://raw.githubusercontent.com/vikingo-44/Software-Gym/main/wallpaper.png');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -68,11 +68,13 @@
     .view-content { display: none; flex-direction: column; height: 100%; }
     .view-content.active { display: flex; }
 
-    #login-overlay {
-        position: fixed; inset: 0; z-index: 1000;
-        background: black; display: flex; align-items: center; justify-content: center;
-        background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop');
-        background-size: cover;
+   #login-overlay {
+    position: fixed;
+    inset: 0;
+    z-index: 1000;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: flex-end !important; /* ESTO es lo que empuja tu recuadro a la derecha */
     }
 
     .custom-scrollbar::-webkit-scrollbar { width: 4px; }
