--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
     position: fixed;
     inset: 0;
     z-index: 1000;
-    display: flex !important;
+    display: flex;
     align-items: center !important;
     justify-content: flex-end !important; /* ESTO es lo que empuja tu recuadro a la derecha */
     }
